<resources>
    <string name="app_name">BuyBuyGo</string>

    <string name="facebook_app_id">326735094614431</string>
    <string name="fb_login_protocol_scheme">fb3326735094614431</string>

    //common
    <string name="userInfo">UserInfo</string>
    <string name="displayName">Display name</string>
    <string name="email">Email</string>
    <string name="id">ID</string>
    <string name="address">Address</string>
    <string name="recipient">Recipient</string>
    <string name="limit">Limit : %1$s Current : %2$s</string>
    <string name="limitCount">5</string>

    //seller
    //bottom navigation
    <string name="commodity">Commodity</string>
    <string name="live">Live</string>
    <string name="order">Order</string>
    <string name="channelRecord">ChannelRecord</string>
    // Commodity Fragment
    //title icon
    <string name="addCommodity">Add</string>
    //Channel record Fragment
    <string name="userID">User ID : %1$s</string>
    <string name="liveUrl">Live Url : %1$s</string>
    <string name="startTime">Start : %1$s</string>
    <string name="endTime">End : %1$s</string>
    <string name="channelDescription">Description : %1$s</string>
    //Channel Order Detail Activity

    <string name="commodityCost">Cost : %1$s</string>
    <string name="commodityProfit">Profit : %1$s</string>
    <string name="commodityTotalCost">TotalCost : %1$s</string>
    <string name="commodityQuantity">Quantity : %1$s</string>
    <string name="commodityTurnover">Turnover : %1$s</string>
    <string name="commodityDescription">Description : %1$s</string>
    <string name="commodityUnitPrice">Unit : %1$s</string>

    //Dialog
    //Create ,Information Field
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="stock">Stock</string>
    <string name="cost">Cost</string>
    <string name="unit_price">Unit price</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="modify">Modify</string>
    //RecyclerView Item
    <string name="push">Push</string>


    //Live Fragment
    //title icon
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //buyer
    // buy dialog
    <string name="remain">Remain : %1$s</string>
    <string name="sold">Sold : %1$s</string>
    //buy orders
    <string name="allOrder">All</string>
    <string name="newestOrder">Newest</string>
    <string name="orderId">Order ID : %1$s</string>
    <string name="commodityName">Name : %1$s</string>
    <string name="unitPrice">Unit : %1$s</string>
    <string name="count">Count : %1$s</string>
    <string name="allPrice">Total : %1$s</string>
    <string name="paid">Paid</string>
    <string name="unPaid">Unpaid</string>
    <string name="channelID">Chanel ID : %1$s</string>
    <string name="isEffective">Effective : %1$s</string>
    <string name="effective">effective</string>
    <string name="unEffective">unEffective</string>
    <string name="orderTime">Order Time : %1$s</string>
    <string name="expiryTime">Expiry Time : %1$s</string>
    <string name="toBeDeleteTime">Delete Time : %1$s</string>


    //buy live
    <string name="remainingQuantity">Remain : %1$s</string>
    <string name="soldQuantity">Sold : %1$s</string>
    //crop
    <string name="crop">CROP</string>
</resources>
