<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_commodity"
        android:icon="@drawable/ic_add_a_commodity_black_24dp"
        android:orderInCategory="0"
        android:title="@string/commodity" />
    <item
        android:id="@+id/action_Live"
        android:icon="@drawable/ic_live_black_24dp"
        android:orderInCategory="1"
        android:title="@string/live" />

    <item
        android:id="@+id/action_uploadCommodity"
        android:icon="@drawable/ic_file_upload_black_24dp"
        android:orderInCategory="2"
        android:title="@string/uploadCommodity" />
    <item
        android:id="@+id/action_Order"
        android:icon="@drawable/ic_order_color_black_24dp"
        android:orderInCategory="3"
        android:title="@string/order" />

    <item
        android:id="@+id/action_Info"
        android:icon="@drawable/ic_person_black_24dp"
        android:orderInCategory="4"
        android:title="@string/userInfo" />
</menu>